fix focus outline on checkboxes being cut off by overflow hidden

--- a/assets/sass/molecules/_facet-groups.scss
+++ b/assets/sass/molecules/_facet-groups.scss
@@ -6,7 +6,8 @@
   border-bottom: 1px solid $nobel;
   ul {
     overflow: hidden;
-    padding: 0;
+    margin: 0 -10px;
+    padding: 0 10px;
     max-height: 0px;
     transition: max-height 0.3s;
     margin-bottom: 0;
